[tool.poetry]
name = "wiki"
version = "0.1.0"
description = ""
authors = ["X1r0z <i@exp10it.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.40"
mkdocs-git-revision-date-localized-plugin = "^1.2.9"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
